--- a/style.css
+++ b/style.css
@@ -1,1 +1,13 @@
-/* Also in Progress, java comes first
+.table{
+  background-color: gray;
+  }
+
+  #a{
+    text-align: center;
+    margin-top: 5%;
+    margin-right: 40%;
+    margin-bottom: 5%;
+    margin-left: 5%;
+  background-color:none;
+  float:right;
+  }
