--- a/style.css
+++ b/style.css
@@ -1,13 +1,45 @@
-.table{
-  background-color: gray;
+
+html,body {
+  background-color: green;
+}
+
+
+/*header*/
+#a{
+
+  position:fixed;
+  background-color:; /* add image?*/
+  text-align: center;
+  font-size:20px;
+  font-family: sans-serif;
+  text-color:white;
+  width:98%;
+  height:0%;
+  margin-bottom: 200%;
+  margin-left: %;
+  margine-righ:25%;
+  margin-top: 5%;
+  border:1px solid black;
+
   }
 
-  #a{
-    text-align: center;
-    margin-top: 5%;
-    margin-right: 40%;
-    margin-bottom: 5%;
-    margin-left: 5%;
-  background-color:none;
+
+#b{
+  font-style: italic;
+  background-color:white;
+  border: 5px;
+  font-size: 18;
+  padding: 25%;
+  margin-top: 100%;
+  margin-bottom: 0%;
+  margin-right: 200%;
+  margin-left: 0%;
   float:right;
-  }
+
+}
+#c{
+
+}
+#d{
+
+}
