--- a/style.css
+++ b/style.css
@@ -1,45 +1,3 @@
-
-html,body {
-  background-color: green;
-}
-
-
-/*header*/
-#a{
-
-  position:fixed;
-  background-color:; /* add image?*/
-  text-align: center;
-  font-size:20px;
-  font-family: sans-serif;
-  text-color:white;
-  width:98%;
-  height:0%;
-  margin-bottom: 200%;
-  margin-left: %;
-  margine-righ:25%;
-  margin-top: 5%;
-  border:1px solid black;
-
-  }
-
-
-#b{
-  font-style: italic;
-  background-color:white;
-  border: 5px;
-  font-size: 18;
-  padding: 25%;
-  margin-top: 100%;
-  margin-bottom: 0%;
-  margin-right: 200%;
-  margin-left: 0%;
-  float:right;
-
-}
-#c{
-
-}
-#d{
-
+body,html{
+  background-color:  #C6BCAE;
 }
