--- a/stylesales.css
+++ b/stylesales.css
@@ -4,6 +4,7 @@ body,html{
 #a{
 
 }
+
 .b{
   display: inline;
   background-color: white;
@@ -16,16 +17,16 @@ body,html{
   float:right;
 
 }
+
 #c{
 
 }
-#x{
-  float: left;
-  margin-top: 20%;
+#x, #c, #a{
+
+  margin-top: 10%;
   margin-right: 5%;
   margin-bottom: 5%;
-  margin-right: 5%;
-  padding-left: 25%;
+
 }
 
 .
